
# Create the extension library
ADD_LIBRARY(Extensions_Inspection
  Utils/TransformationNodeInspector.h
  Utils/TransformationNodeInspector.cpp
  Utils/RenderStateNodeInspector.h
  Utils/RenderStateNodeInspector.cpp
  Utils/CameraInspector.h
  Utils/CameraInspector.cpp
  Utils/PerspectiveViewingVolumeInspector.h
  Utils/PerspectiveViewingVolumeInspector.cpp
)
